# django-tutorial-core

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/core/utils/: settings.py
core/project/: settings.py
core/project/settings/: __init__.py  base.py  logging.py
core/project/settings/templates/: settings.dev.py
scripts/: production_data.py
