[tool.poetry]
name = "core-tutorial"
version = "0.1.0"
description = ""
authors = ["mario <codemario318@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "core_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-filter = "^23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
